--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content=""> 
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>         
         <!--ANGLE-->         
-        <title>DR.MOHAMMED SAYAGH</title>         
+        <title>MOHAMMED SAYAGH</title>         
         <link rel="icon" href="image/logo.png" type="image/png"> 
         <!-- Bootstrap core CSS -->         
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
