--- a/_pgbackup/index_1604932822.html
+++ b/_pgbackup/index_1604932822.html
@@ -56,7 +56,7 @@
                                             PostDoc in Queen's University.</h3> 
                                             <h1 style="padding: 0.6% 0 1% 0; font-size: 2.4em; left: 4%; font-family: Roboto Condensed; color: #383838; text-transform: uppercase; font-weight: 600; letter-spacing: 0.2em;"> 
                                             Mohammed Sayagh</h1> 
-                                            <p style="left: 4%; text-align: justify; position: relative; opacity: 1; letter-spacing: 1.6px; line-height: 1.8em; max-width: 70%; font-size: 0.95em !important; min-width: auto; font-weight: 400;" class="fontText infoSumo"> 
+                                            <p style="left: 4%; text-align: justify; position: relative; opacity: 1; letter-spacing: 1.6px; line-height: 1.8em; max-width: 70%; font-size: 0.95em !important; min-width: auto;" class="fontText infoSumo"> 
                                             I'm working as a PostDoc fellow in <a href="http://sail.cs.queensu.ca" rel="noreferrer" target="_blank"> the Software Analysis and Intelligence Lab (SAIL) </a>at <a href="http://queensu.ca" target="_blank"> Queen's University
                                                 (Kingston, ON) </a> 
                                             under the suppervision of <a href="http://research.cs.queensu.ca/home/ahmed/home/" rel="noreferrer" target="_blank"> 
