--- a/_pgbackup/index_1604749707.html
+++ b/_pgbackup/index_1604749707.html
@@ -26,7 +26,10 @@
         <!--CONTENEUR TOTAL-->
         <main aria-hidden="true" class="align-content-md-between align-items-md-stretch container-fluid d-md-inline-flex flex-md-column flex-md-nowrap justify-content-md-between" style="min-height: 100vh; width: 100%; display: flex; z-index: 999; position: fixed; flex-direction: column; justify-content: start;">
             <!--BARRE DE NAVIGATION-->
-            <div id="barre-haut" class="backgroundMenu row" style="z-index: 9; width: 10%; margin-right: 90%; bottom: 1rem; display: flex; align-items: flex-start; flex-direction: row;">
+            <div id="barre-haut" class="backgroundMenu row" style="z-index: 9;
+
+/* margin-right: 6px */
+width: 10%; margin-right: 90%; bottom: 1rem; display: flex; align-items: flex-start; flex-direction: row;">
                 <!--LOGO-->
                 <!--MENU-->
                 <div id="logo" class="animated col-12 col-md-2 d-flex delay-0s fadeInDown justify-content-start" style="padding-top: 40px; padding-left: 40px;">
@@ -42,7 +45,7 @@
                         <div id="carousel" data-ride="carousel" data-interval="false" data-pause="hover" class="align-content-start align-items-start carousel col-12 col-xl-12 d-flex flex-nowrap paddingBotton slide" style="align-items: flex-start; height: auto;">
                             <div class="align-items-lg-center align-items-md-start align-items-start carousel-inner heightMax spaceBottomForMobile spaceBotton" style="width: 100%; display: content;">
                                 <!--CONTENU HOME-->
-                                <div class="dimention-contenu carousel-item active animated zoomIn" style="min-height: 100vh;animation-delay: 0.6s;">
+                                <div class="dimention-contenu carousel-item active animated zoomIn" style="min-height: 100vh;">
                                     <div class="row d-flex align-items-center container1-md d-md-flex align-items-md-center align-content-center align-content-md-center align-items-lg-center align-content-lg-center d-lg-flex">
                                         <!--image profil-->
                                         <div class="add-mini col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="width: 70vh;">
@@ -54,9 +57,9 @@
                                         <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 3rem 0 3rem 0rem; overflow-x: hidden;">
                                             <h3 style="left: 4%; position: relative; font-family: Roboto Condensed; text-transform: uppercase; font-weight: 400; font-size: 0.8em; color: #383838; letter-spacing: 0.25em;">
                                             PostDoc in Queen's University.</h3>
-                                            <h1 style="padding: 0.6% 0 1% 0; font-size: 2.4em; left: 4%; font-family: Roboto Condensed; color: #383838; text-transform: uppercase; font-weight: 600; letter-spacing: 0.2em;">
+                                            <h1 style="padding: 0.6% 0px 1% 0px; font-size: 2.4em; left: 4%; font-family: Roboto Condensed; color: #383838; text-transform: uppercase; font-weight: 600; letter-spacing: 0.2em;">
                                             Mohammed Sayagh</h1>
-                                            <p style="left: 4%; text-align: justify; position: relative; opacity: 1; letter-spacing: 1.6px; line-height: 1.8em; max-width: 70%; font-size: 0.99em; min-width: auto;" class="fontText infoSumo">
+                                            <p style="left: 4%; text-align: justify; position: relative; opacity: 1; letter-spacing: 1.4px; line-height: 1.8em; max-width: 70%; font-size: 0.9em; min-width: auto;" class="fontText infoSumo">
                                             I'm working as a PostDoc fellow in <a href="http://sail.cs.queensu.ca" rel="noreferrer" target="_blank"> the Software Analysis and Intelligence Lab (SAIL) </a>at <a href="http://queensu.ca" target="_blank"> Queen's University
                                                 (Kingston, ON) </a>
                                             under the suppervision of <a href="http://research.cs.queensu.ca/home/ahmed/home/" rel="noreferrer" target="_blank">
@@ -403,7 +406,7 @@ padding: 0;">
                         </div>
                     </div>
                     <div class="align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; min-width: 100%; height: 0%; opacity: 0.8; z-index: 99; display: flex; flex-direction: row; position: absolute; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap; align-items: flex-start; align-content: center;">
-                        <div class="align-content-lg-start align-content-md-start align-content-sm-start align-content-start align-items-lg-start align-items-md-start align-items-sm-start align-items-start animated col-12 col-lg-3 col-md-10 col-sm-10 column contact-info container-navigation d-flex d-lg-flex d-md-flex d-sm-flex fadeInUp flecheCadrePiedDeLaPage flex-lg-row flex-md-row flex-row flex-sm-row justify-content-lg-start justify-content-md-start justify-content-sm-start justify-content-start offset-lg-0 offset-md-2 offset-sm-1 orderPiedDeLaPage orderPiedDeLaPage1 reseau-sm" style="opacity: 0.7; color: #EEE;">
+                        <div class="align-content-lg-start align-content-md-start align-content-sm-start align-content-start align-items-lg-start align-items-md-start align-items-sm-start align-items-start animated col-12 col-lg-4 col-md-10 col-sm-10 column contact-info container-navigation d-flex d-lg-flex d-md-flex d-sm-flex fadeInUp flecheCadrePiedDeLaPage flex-lg-row flex-md-row flex-row flex-sm-row justify-content-lg-start justify-content-md-start justify-content-sm-start justify-content-start offset-lg-0 offset-md-2 offset-sm-1 orderPiedDeLaPage orderPiedDeLaPage1 reseau-sm" style="opacity: 0.7; color: #EEE;">
                             <div class="row">
                                 <div class="col-lg-10 col-md-12">
                                     <div class="col-info col-md-12 d-flex">
@@ -413,7 +416,7 @@ padding: 0;">
                             </div>
                         </div>
                     </div>
-                    <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; width: 100%; height: 0%; display: flex; z-index: 99; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;">
+                    <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; width: 100%; height: 0%; display: flex; z-index: 99999; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;">
                         <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-column justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; z-index: 999; right: 0;">
                             <div class="align-content-lg-center align-content-md-center align-content-sm-center align-items-lg-center align-items-md-center align-items-sm-center carousel-control-prev col-lg-1 col-md-3 col-xl-1 columnFleche d-lg-flex d-md-flex d-sm-flex ele-nav flex-column flex-lg-column flex-md-column flex-sm-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center">
                                 <a href="#carousel" role="button" data-slide="prev" style="
@@ -433,7 +436,8 @@ padding: 0;">
     <script>
     document.querySelector('#carousel').addEventListener('slide.bs.carousel', function () {
         document.querySelector('#carousel').carousel('pause');
-    });
+    })
+    document.querySelector('#carousel').carousel('pause');
 </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
