--- a/_pgbackup/index_1604762190.html
+++ b/_pgbackup/index_1604762190.html
@@ -403,7 +403,7 @@ padding: 0;">
                         </div>
                     </div>
                     <div class="align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; min-width: 100%; height: 0%; opacity: 0.8; z-index: 99; display: flex; flex-direction: row; position: absolute; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap; align-items: flex-start; align-content: center;">
-                        <div class="align-content-lg-start align-content-md-start align-content-sm-start align-content-start align-items-lg-start align-items-md-start align-items-sm-start align-items-start animated col-12 col-lg-3 col-md-10 col-sm-10 column contact-info container-navigation d-flex d-lg-flex d-md-flex d-sm-flex fadeInUp flecheCadrePiedDeLaPage flex-lg-row flex-md-row flex-row flex-sm-row justify-content-lg-start justify-content-md-start justify-content-sm-start justify-content-start offset-lg-0 offset-md-2 offset-sm-1 orderPiedDeLaPage orderPiedDeLaPage1 reseau-sm" style="opacity: 0.7; color: #EEE;">
+                        <div class="align-content-lg-start align-content-md-start align-content-sm-start align-content-start align-items-lg-start align-items-md-start align-items-sm-start align-items-start animated col-12 col-lg-4 col-md-10 col-sm-10 column contact-info container-navigation d-flex d-lg-flex d-md-flex d-sm-flex fadeInUp flecheCadrePiedDeLaPage flex-lg-row flex-md-row flex-row flex-sm-row justify-content-lg-start justify-content-md-start justify-content-sm-start justify-content-start offset-lg-0 offset-md-2 offset-sm-1 orderPiedDeLaPage orderPiedDeLaPage1 reseau-sm" style="opacity: 0.7; color: #EEE;">
                             <div class="row">
                                 <div class="col-lg-10 col-md-12">
                                     <div class="col-info col-md-12 d-flex">
@@ -413,7 +413,7 @@ padding: 0;">
                             </div>
                         </div>
                     </div>
-                    <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; width: 100%; height: 0%; display: flex; z-index: 99; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;">
+                    <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; width: 100%; height: 0%; display: flex; z-index: 99999; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;">
                         <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-column justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; z-index: 999; right: 0;">
                             <div class="align-content-lg-center align-content-md-center align-content-sm-center align-items-lg-center align-items-md-center align-items-sm-center carousel-control-prev col-lg-1 col-md-3 col-xl-1 columnFleche d-lg-flex d-md-flex d-sm-flex ele-nav flex-column flex-lg-column flex-md-column flex-sm-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center">
                                 <a href="#carousel" role="button" data-slide="prev" style="
@@ -433,7 +433,8 @@ padding: 0;">
     <script>
     document.querySelector('#carousel').addEventListener('slide.bs.carousel', function () {
         document.querySelector('#carousel').carousel('pause');
-    });
+    })
+    document.querySelector('#carousel').carousel('pause');
 </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
