--- a/index.html
+++ b/index.html
@@ -53,25 +53,21 @@
                                         <!--text profil-->
                                         <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 0rem 0 3rem 0rem; overflow-x: hidden;">
                                             <h3 style="left: 4%; position: relative; font-family: Roboto Condensed; text-transform: uppercase; font-weight: 400; font-size: 0.8em; color: #383838; letter-spacing: 0.25em;">
-                                            PostDoc in Queen's University.</h3>
+                                            Assistant Professor at ETS (Québec University).</h3>
                                             <h1 style="padding: 0.6% 0 1% 0; font-size: 2.4em; left: 4%; font-family: Roboto Condensed; color: #383838; text-transform: uppercase; font-weight: 600; letter-spacing: 0.2em;">
                                             Mohammed Sayagh</h1>
                                             <p style="left: 4%; text-align: justify; position: relative; opacity: 1; letter-spacing: 1.6px; line-height: 1.6em; max-width: 78%; font-size: 0.99em; min-width: auto;" class="fontText infoSumo">
-                                            I'm working as a PostDoc fellow in <a href="http://sail.cs.queensu.ca" rel="noreferrer" target="_blank"> the Software Analysis and Intelligence Lab (SAIL) </a>at <a href="http://queensu.ca" target="_blank"> Queen's University
+                                            I'm an assistant professor at Ecole Technologie Supérieur - Québec University. Before that, I was working as a PostDoc fellow in <a href="http://sail.cs.queensu.ca" rel="noreferrer" target="_blank"> the Software Analysis and Intelligence Lab (SAIL) </a>at <a href="http://queensu.ca" target="_blank"> Queen's University
                                                 (Kingston, ON) </a>
                                             under the suppervision of <a href="http://research.cs.queensu.ca/home/ahmed/home/" rel="noreferrer" target="_blank">
                                                 Prof. Ahmed E. Hassan. </a> I obtained my Ph.D. from <a href="http://mcis.polymtl.ca/" rel="noreferrer" target="_blank"> the Maintenance,
                                                 Construction, and Intellligence of Software lab (MCIS) </a><a href="http://polymtl.ca" rel="noreferrer" target="_blank"> Ecole
                                                 Polytechnique (Montréal, QC). </a>at , in which I was supervised by <a href="http://mcis.polymtl.ca/bram.html" target="_blank" rel="noreferrer"> Prof.
                                                 Bram Adams. </a>
-                                            I have a wide range of research interests but my focus is related to
-                                            software variability and the engineering of large scale software
-                                            systems.
-                                            I have applied different empricial studies techniques to my research
-                                            including qualitative and quantitative analysis, data mining, source code
-                                            analysis.
-                                            During my research, I mined different software repositories such as source
-                                            code repositories, online forums (e.g., StackOverflow), and DockerHub. </p>
+                                            I have a wide range of research interests that are related to software empirical studies. My main focus is related to
+                                            software variability in multi-component softawre systems.
+                                            I have applied different qualitative and quantitative empricial studies techniques to my research, such as mining software repositories (e.g., source code repositories, online forums, and DockerHub), source code
+                                            analysis (e.g., Slicing), and machine learning. </p>
                                         </div>
                                     </div>
                                 </div>
