--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                                                 (Kingston, ON) </a>
                                             under the suppervision of <a href="http://research.cs.queensu.ca/home/ahmed/home/" rel="noreferrer" target="_blank">
                                                 Prof. Ahmed E. Hassan. </a> I obtained my Ph.D. from <a href="http://mcis.polymtl.ca/" rel="noreferrer" target="_blank"> the Maintenance,
-                                                Construction, and Intellligence of Software lab (MCIS) </a><a href="http://polymtl.ca" rel="noreferrer" target="_blank"> Ecole
-                                                Polytechnique (Montréal, QC). </a>at , in which I was supervised by <a href="http://mcis.polymtl.ca/bram.html" target="_blank" rel="noreferrer"> Prof.
+                                                Construction, and Intellligence of Software lab (MCIS) </a> at <a href="http://polymtl.ca" rel="noreferrer" target="_blank"> Ecole
+                                                Polytechnique (Montréal, QC)</a> under the supervision of <a href="http://mcis.polymtl.ca/bram.html" target="_blank" rel="noreferrer"> Prof.
                                                 Bram Adams. </a>
                                             I have a wide range of research interests that are related to software empirical studies. My main focus is related to
                                             software variability in multi-component softawre systems.
