--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@ padding: 0;">
                                                             <div style="height: 5px; width: 2rem; background-color: #393e43; margin: 1.5rem 0 1.5rem 0.8rem;">
 </div>
                                                         </div>
-                                                        <p><em>Sayagh, M., Kerazi, N., Adams, B. and Petrillo, F.(2018). </em><a href="http://mcis.polymtl.ca/publications/2019/tse.pdf">Software
+                                                        <p><em>Sayagh, M., Kerazi, N., Adams, B. and Petrillo, F.(2018). <a href="http://mcis.polymtl.ca/publications/2019/tse.pdf">Software
                                                             Configuration Engineering in Practice -Interviews, Survey,
                                                             and Systematic Literature Review</a>, Transactions on
-                                                        Software Engineering(TSE).<a href="http://mcis.polymtl.ca/publications/2019/tse.bib" rel="noreferrer" arget="_blank"> BibTeX </a> </p>
+                                                        Software Engineering (TSE).<a href="http://mcis.polymtl.ca/publications/2019/tse.bib" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p>
                                                         <p><em>Sayagh, M., Dong, Z., Andrzejak, A., and Adams,
                                                             B.(2017).</em> <a rel="noreferrer" href="pdf/Does the Choice of Configuration Framework Matter for Developers.pdf">
                                                             Does the Choice of configuration Framework Matter for
