--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@ min-width: 100%; overflow: hidden;">
                                                             <a class="col-lg-12 nav-link" data-toggle="tab" rel="noreferrer" href="#Teaching">
                                                             Teaching </a>
                                                         </li>
-                                                        <li class="titre hvr-wobble-horizontal nav-item col-lg-12 col-md-4 col-6 col-sm-6">
-                                                            <a class="col-lg-12 nav-link" data-toggle="tab" rel="noreferrer" href="#Other_Activities">
-                                                            Other Activities </a>
-                                                        </li>
+                                                        
                                                     </ul>
                                                 </div>
                                             </div>
@@ -176,38 +173,43 @@ padding: 0;">
                                                             Configuration Engineering in Practice -Interviews, Survey,
                                                             and Systematic Literature Review</a>, Transactions on
                                                         Software Engineering (TSE).<a href="http://mcis.polymtl.ca/publications/2019/tse.bib" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p>
+                                                        
                                                         <p><em>Sayagh, M., Dong, Z., Andrzejak, A., and Adams,
-                                                            B.(2017).</em> <a rel="noreferrer" href="pdf/Does the Choice of Configuration Framework Matter for Developers.pdf">
+                                                            B.(2017). <a rel="noreferrer" href="pdf/Does the Choice of Configuration Framework Matter for Developers.pdf">
                                                             Does the Choice of configuration Framework Matter for
                                                             Developers? </a>, in Proceedings of the 17th IEEE
                                                         International
                                                         Working conference on Source Code Analysis and Manipulation,
                                                         SCAM (Shanghai, China).
-                                                        (Acceptance ratio: 14/31=45%) <a href="http://mcis.polymtl.ca/publications/2017/scam17a.bib" rel="noreferrer" target="_blank"> BibTeX </a> </p>
+                                                        (Acceptance ratio: 14/31=45%) 
+                                                            <a href="http://mcis.polymtl.ca/publications/2017/scam17a.bib" rel="noreferrer" target="_blank"> BibTeX </a>
+                                                            </em></p>
                                                         <!--paragraphe 2-->
-                                                        <p><em> Sayagh, M., Kerzaki, N., Adams, B.(2017).</em> <a href="pdf/On Cross-stack Configuration Errors.pdf" rel="noreferrer" target="_blank"> On Cross-stack Configuration
+                                                        <p><em> Sayagh, M., Kerzaki, N., Adams, B.(2017). <a href="pdf/On Cross-stack Configuration Errors.pdf" rel="noreferrer" target="_blank"> On Cross-stack Configuration
                                                             Errors </a>,
                                                         in Proceedings of the 39th International Conference on Software
                                                         Engineering, ICSE (Buenos Aires, Argentina).
-                                                        (Acceptance ratio: 68/398=17%) <a href="http://mcis.polymtl.ca/publications/2017/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a></p>
+                                                        (Acceptance ratio: 68/398=17%) 
+                                                            <a href="http://mcis.polymtl.ca/publications/2017/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a></em></p>
                                                         <!--paragraphe 3-->
                                                         <p><em>Hassan, S., King, Z., Hafiz, M.,Sayagh, M., Adams, B. and
-                                                            Hindle, A. (2016).</em> <a href="pdf/Energy Profiles of Java Collections Classes.pdf" rel="noreferrer" target="_blank">Energy
+                                                            Hindle, A. (2016). <a href="pdf/Energy Profiles of Java Collections Classes.pdf" rel="noreferrer" target="_blank">Energy
                                                             Profiles of Java Collections Classes, </a> in Proceedings of
                                                         the 38th International Conference
                                                         on Software Engineering, ICSE (Austin, TX, US).
-                                                        (Acceptance ratio: 101/530=19%) <a href="http://mcis.polymtl.ca/publications/2016/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a> (ACM SIGSOFT
-                                                        Distinguished Paper Award)</p>
+                                                        (Acceptance ratio: 101/530=19%) <a href="http://mcis.polymtl.ca/publications/2016/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a> 
+                                                            (ACM SIGSOFT
+                                                        Distinguished Paper Award)</em></p>
                                                         <!--paragraphe 4-->
-                                                        <p> <em> Sayagh, M.</em> &quot;Tracking Misconfiguration Errors in
+                                                        <p> <em> Sayagh, M. &quot;Tracking Misconfiguration Errors in
                                                         Multi-layered Architecture Systems&quot;.
                                                         Doctoral Symposium Track of the 23rd IEEE International
                                                         Conference
                                                         on Software
                                                         Analysis, Evolution, and Reengineering (SANER
-                                                        2016). </p>
+                                                        2016). </em></p>
                                                         <!--paragraphe 5-->
-                                                        <p> <em> Sayagh, M. and Adams, B. (2015).</em> <a href="">
+                                                        <p> <em> Sayagh, M. and Adams, B. (2015). <a href="">
                                                             Multi-layer
                                                             Software Configuration - Empirical
                                                             Study on Wordpress </a> , in Proceedings of the 15th IEEE
@@ -217,7 +219,7 @@ padding: 0;">
                                                         on Source Code Analysis and Manipulation, SCAM (Bremen,
                                                         Germany). (Acceptance
                                                         ratio: 24/68=35%) <a href="http://mcis.polymtl.ca/publications/2015/scam15a.bib" rel="noreferrer" target="_blank"> BibTeX </a> [ <a rel="noreferrer" href="http://mcis.polymtl.ca/~msayagh/Paper/SCAM15/LOC_vs_Options/" target="_blank">Additional figures</a>
-                                                        ] </p>
+                                                        ] </em></p>
                                                     </div>
                                                     <!--Technical Reports-->
                                                     <div class="contenu tab-pane animated fadeInUp" role="tabpanel" id="Technical_Reports">
