--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ padding: 0;">
                                                             </li>
                                                             <li>
                                                                 <a href="https://ees.elsevier.com/jss/default.asp" rel="noreferrer" target="_blank">Journal of Systems and
-                                                                Software</a>
+                                                                Software (JSS)</a>
                                                             </li>
                                                             <li>
                                                                 <a href="https://www.computer.org/csdl/magazine/so" rel="noreferrer" target="_blank">IEEE Software</a>
@@ -343,7 +343,10 @@ padding: 0;">
                                                         <p> </p>
                                                         <ul>
                                                             <li>
-                                                                <a href="https://www-01.ibm.com/ibm/cas/cascon/" rel="noreferrer" target="_blank">CASCON 2019.</a>
+                                                                <a href="https://saner2020.csd.uwo.ca/" rel="noreferrer" target="_blank">SANER 2020.</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="https://www-01.ibm.com/ibm/cas/cascon/" rel="noreferrer" target="_blank">CASCON 2019 and 2020.</a>
                                                             </li>
                                                             <li>
                                                                 <a href="https://2018.msrconf.org/track/msr-2018-Data-Showcase-Papers" rel="noreferrer" target="_blank">MSR 2018 Data Showcase</a>
@@ -369,23 +372,29 @@ padding: 0;">
                                                             <div style="height: 5px; width: 2rem; background-color: #393e43; margin: 1.5rem 0 1.5rem 0.8rem;">
 </div>
                                                         </div>
+                                                        <p>Fall 2019:</p>
+                                                        <ul>
+                                                            <li>Lecturer of the courses:
+                                                                <a href="https://sailhome.cs.queensu.ca/~msayagh/CISC_850_Engineering_ULSS_Fall_2019.html" rel="noreferrer" target="_blank">CISC 850 </a>and
+                                                                </li>
+                                                        </ul>
                                                         <p>Winter 2018:</p>
                                                         <ul>
-                                                            <li>Teacher of the courses:
+                                                            <li>Lecturer of the courses:
                                                                 <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000 </a>and
                                                                 <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=inf3710" rel="noreferrer" target="_blank">INF3710</a>
                                                             </li>
                                                         </ul>
                                                         <p>Automn 2017:</p>
                                                         <ul>
-                                                            <li>Teacher of the course:
+                                                            <li>Lecturer of the course:
                                                                 <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000</a>
                                                             </li>
                                                             <li>Teacher assistant:
                                                                 <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=INF2010" rel="noreferrer" target="_blank">INF2010</a>
                                                             </li>
                                                         </ul>
-                                                        <p><strong>Winter 2016, Automn 2016, and Winter 2017:</strong></p>
+                                                        <p><strong>Winter 2016, Fall 2016, and Winter 2017:</strong></p>
                                                         <ul>
                                                             <li>Teacher assistant:
                                                                 <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000</a>
